chore: seal broken state